tests/snapshots/yaml_suite_snapshots__yaml_suite_2CMS_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid mapping in plain multiline
  tags: error mapping
  tree: "+STR\n +DOC\n"
  yaml: "this\n is\n  invalid: x\n"
