tests/snapshots/yaml_suite_snapshots__yaml_suite_2EBW_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Allowed characters in keys
  from: "@perlpunk"
  tags: mapping scalar
  yaml: "a!\"#$%&'()*+,-./09:;<=>?@AZ[\\]^_`az{|}~: safe\n?foo: safe question mark\n:foo: safe colon\n-foo: safe dash\nthi…"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a!\"#$%&'()*+,-./09:;<=>?@AZ[\\\\]^_`az{|}~\n   =VAL :safe\n   =VAL :?foo\n   =VAL :sa…"
  json: "{\n  \"a!\\\"#$%&'()*+,-./09:;<=>?@AZ[\\\\]^_`az{|}~\": \"safe\",\n  \"?foo\": \"safe question mark\",\n  \":foo\": \"safe co…"
  dump: "a!\"#$%&'()*+,-./09:;<=>?@AZ[\\]^_`az{|}~: safe\n?foo: safe question mark\n:foo: safe colon\n-foo: safe dash\nth…"
