tests/snapshots/yaml_suite_snapshots__yaml_suite_2G84_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Literal modifers
  from: "@ingydotnet"
  tags: literal scalar
  fail: true
  yaml: "--- |0\n"
  tree: "+STR\n +DOC ---\n"
- fail: true
  yaml: "--- |10\n"
- yaml: "--- |1-∎\n"
  tree: "+STR\n +DOC ---\n  =VAL |\n -DOC\n-STR\n"
  json: "\"\"\n"
  emit: "--- \"\"\n"
- yaml: "--- |1+∎\n"
  tree: "+STR\n +DOC ---\n  =VAL |\n -DOC\n-STR\n"
  emit: "--- \"\"\n"
