tests/snapshots/yaml_suite_snapshots__yaml_suite_2JQS_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Block Mapping with Missing Keys
  from: NimYAML tests
  tags: duplicate-key mapping empty-key
  yaml: ": a\n: b\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :\n   =VAL :a\n   =VAL :\n   =VAL :b\n  -MAP\n -DOC\n-STR\n"
