tests/snapshots/yaml_suite_snapshots__yaml_suite_2JQS_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: NimYAML tests
  name: Block Mapping with Missing Keys
  tags: duplicate-key mapping empty-key
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :\n   =VAL :a\n   =VAL :\n   =VAL :b\n  -MAP\n -DOC\n-STR\n"
  yaml: ": a\n: b\n"
