tests/snapshots/yaml_suite_snapshots__yaml_suite_2LFX_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: "Spec Example 6.13. Reserved Directives [1.3]"
  from: "6LVF, modified for YAML 1.3"
  tags: spec directive header double 1.3-mod
  yaml: "%FOO  bar baz # Should be ignored\n              # with a warning.\n---\n\"foo\"\n"
  tree: "+STR\n +DOC ---\n  =VAL \"foo\n -DOC\n-STR\n"
  json: "\"foo\"\n"
  dump: "---\n\"foo\"\n"
  emit: "--- \"foo\"\n"
